# paris-hackathon-omni-agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
omni_agent/: __init__.py  a2a.py  adk_mcp_server.py  agent.py  playwright_lightpanda_service.py
omni_agent/agents/: deep_research_orchestrator.py
omni_agent/agents/analysis/: claim_structuring_agent.py  gap_identification_agent.py
omni_agent/agents/common/: markdown_transformer_agent.py  scrape_agent.py
omni_agent/agents/research/: research_orchestrator_agent.py  single_question_research_agent.py
omni_agent/agents/synthesis/: evidence_adjudicator_agent.py
omni_agent/core/: logging_config.py  models.py  settings.py  tools.py  web_scraper.py
omni_agent/mcp_client_test/: agent.py
