[project]
name = "omni-agent"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a>=0.44",
    "google-adk>=1.14.1",
    "groq>=0.31.1",
    "litellm>=1.77.4",
    "playwright>=1.55.0",
    "structlog>=25.4.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "a2a-sdk[http-server]>=0.3.7",
]

[dependency-groups]
dev = ["debugpy>=1.8.14", "mypy>=1.15.0", "pre-commit>=4.1.0", "ruff>=0.9.6"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
plugins = ['pydantic.mypy']
